# TicketFlow

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
static/: style.css  style.sass  style.sh
templates/: index.html
